--- a/style.css
+++ b/style.css
@@ -329,6 +329,8 @@
 
 /*.......................... footer-end..................... */
 
+/* for mobile */
+
 @media only screen and (max-width:668px){
     /* banner start */
     .container-full{
@@ -426,6 +428,10 @@
         display: block;
         margin: 0;
     }
+    .contract-mail input{
+        height: 66px;
+        width: 100%;
+    }
     /* .contract end  */
     .footer{
         display: block;
@@ -435,6 +441,7 @@
         margin-bottom: 20px ;
     }
 }
+    /* for tablet */
     @media only screen and (min-width: 689px) and (max-width:992px){
         .container-full{
             width: 100%;
@@ -516,12 +523,13 @@
         
         /* news end */
  }
- @media only screen and (min-width: 993px){
-    .container-full{
-        width: 100%;
-        height: auto;
+    /* large screen */
+    @media only screen and (min-width: 993px){
+        .container-full{
+            width: 100%;
+            height: auto;
+        }
+        .banner-left{
+            height: auto;
+        }
     }
-     .banner-left{
-         height: auto;
-     }
- }
